--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>pruijs.nl</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta>
     <style type="text/css">
       body {
         margin: 0;
@@ -28,7 +30,7 @@
 
       .container {
         text-align: center;
-        width: 950px;
+     /* width: 950px; */
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
