--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>In de afgelopen achtien jaar ben ik met bijna elk aspect van het ontwikkelen van software in aanraking geweest; van programmeur tot architect en van technisch beheer tot functioneel ontwerper.</p>
                 <p>Mijn passie ligt in het ontwerpen en programmeren van software met Java.</p>
                 <h2>Vaardigheden</h2>
-                <p>Realiseren van software systemen van het idee tot in beheer; Requirement Analyse, Functioneel Ontwerp, Technisch Ontwerp, Interface Specificatie, Kosteninschatting, Planning, Programmeren, Geautomatiseerd Testen, Documenteren, Coaching, Training.</p>
+                <p>Realiseren van software systemen van het idee tot in beheer; Requirement Analyse, Functioneel Ontwerp, Technisch Ontwerp, Interface Specificatie, Kosteninschatting, Planning, Programmeren, Performance Analyse, Geautomatiseerd Testen, Documenteren, Coaching, Training.</p>
                 <h2>Automatiseringsmiddelen</h2>
                 <dl>
                     <div class="category">Talen</div>
